k8s/infra/monitoring/prometheus-stack/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "grafana.emisia.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
