k8s/infra/monitoring/prometheus-stack/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring
  namespace: monitoring
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.emisia.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: http-web # 9090
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`grafana.emisia.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: http-web # 80
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`alertmanager.emisia.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: http-web # 9093
      middlewares:
        - name: traefik-forward-auth
